--- a/bwf-frontend/src/App.css
+++ b/bwf-frontend/src/App.css
@@ -1,38 +1,27 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color: var(--bg-color);
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header {
+  text-align: center;
+  border-bottom: 2px solid var(--main-accent-color);
+  padding: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.general-content {
+  display: grid;
+  grid-template-columns: 15rem 1fr;
+}
+
+.sidebar {
+  background-color: var(--bg-light-color);
+  padding: 1rem;
+  height: 100vh;
+}
+
+.main {
+  padding: 1rem;
 }
